apps/base/new-new-boplats/web/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: new-new-boplats-web
  annotations:
    kustomize.toolkit.fluxcd.io/health-check: disabled
spec:
  replicas: 3
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: new-new-boplats-web
  template:
    spec:
      containers:
        - name: new-new-boplats-web
          image: artifactory.local.hejsan.xyz/gitlab-registry/josmase/apps/boplats-map/web:2026-08-13-b0ac39c3
          resources:
            limits:
              memory: 32Mi
              cpu: 100m
            requests:
              memory: 16Mi
              cpu: 10m
