apps/base/new-new-boplats/web/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: new-new-boplats-web
spec:
  selector:
    app: new-new-boplats-web
  ports:
    - name: http
      targetPort: 80
      port: 80
