apps/base/new-new-boplats/web/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: new-new-boplats-web

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`new-new-boplats.${DOMAIN_INTERNAL}`) || Host(`nya-nya-boplats.${DOMAIN_INTERNAL}`)
      kind: Rule
      services:
        - name: new-new-boplats-web
          port: http

  tls:
    secretName: ${CERT_SECRET_INTERNAL}

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: new-new-boplats-web-external

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`new-new-boplats.${DOMAIN_EXTERNAL}`) || Host(`nya-nya-boplats.${DOMAIN_EXTERNAL}`)
      kind: Rule
      services:
        - name: new-new-boplats-web
          port: http

  tls:
    secretName: ${CERT_SECRET_EXTERNAL}
